[package]
name = "zoinks-lib"
version = "0.1.0"
authors = ["Alex Zepeda <zoinks@inferiorhumanorgans.com>"]
edition = "2018"

[dependencies]
heck = "0.3"
indexmap = { version = "1.6", features = ["serde-1"] }
log = "0.4"
maplit = "*"
proc-macro2 = "1.0.2"
quote = "1.0"
regex = "1"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
syn = { version = "1.0", features = ["extra-traits", "full"] }

zoinks-support = { path = "../zoinks-support" }
